# gnome-notes

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  bijiben.doap  configure  configure.ac  configure_meson  gnome-notes.doap  meson.build  meson_options.txt  meson_post_install.py  run.in
data/: Default-black.css  Default-white.css  Default.css  Makefile.am  bijiben-search-provider.ini  bijiben.appdata.xml.in  bijiben.desktop.in.in  bijiben.js  bijiben.xml.in  bjb.gresource.xml  meson.build  org.gnome.Notes-search-provider.ini  org.gnome.Notes.SearchProvider.service.in  org.gnome.Notes.desktop.in  org.gnome.Notes.gschema.xml  org.gnome.Notes.xml.in  org.gnome.bijiben-search-provider.ini  org.gnome.bijiben.SearchProvider.service.in  org.gnome.bijiben.appdata.xml.in  org.gnome.bijiben.desktop.in.in  org.gnome.bijiben.gschema.xml  org.gnome.bijiben.gschema.xml.in
data/appdata/: meson.build  org.gnome.Notes.appdata.xml.in  org.gnome.bijiben.appdata.xml.in
data/icons/: Makefile.am  meson.build
data/resources/: Adwaita.css  app-menu.ui  bjb-detached-window.ui  bjb-note-list.ui  bjb-note-view.ui  bjb-notebook-row.ui  bjb-notebooks-dialog.ui  bjb-side-view.ui  bjb-window-base.ui  bjb-window.ui  editor-toolbar.ui  empty-results-box.ui  help-overlay.ui  import-dialog.ui  list-view-row.ui  list-view.ui  main-toolbar.ui  organize-dialog.ui  selection-toolbar.ui  settings-dialog.ui  style.css
help/: LINGUAS  Makefile.am  meson.build
help/C/: bjb-colours.page  bjb-create.page  bjb-delete.page  bjb-editor.page  bjb-find.page  bjb-share.page  bjb-tags.page  collections.page  colors.page  create.page  cut-copy-paste.page  delete-permanent.page  delete-restore.page  delete.page  format-list.page  format-text.page  formatting.page  index.page  introduction.page  listing.page  new-window.page  notebooks.page  rename.page  search.page  share.page  undo-redo.page  undo-redo.page.stub  view-trash.page
help/ca/: ca.po
help/cs/: cs.po  new-window.page
help/da/: da.po
help/de/: de.po
help/el/: el.po  new-window.page
help/es/: es.po  new-window.page
help/eu/: eu.po
help/fr/: fr.po  new-window.page
help/fur/: fur.po
help/gl/: gl.po
help/hu/: hu.po  new-window.page
help/id/: id.po
help/ko/: ko.po
help/nl/: nl.po
help/pl/: pl.po
help/pt_BR/: new-window.page  pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
src/: .#bjb-selection-toolbar.c  .bjb-window-base.c.swp  Makefile.am  biji-date-time.c  biji-info-set.h  biji-string.c  biji-string.h  bijiben-shell-search-provider.c  bjb-app-menu.c  bjb-app-menu.h  bjb-application.c  bjb-application.h  bjb-bijiben.c  bjb-bijiben.h  bjb-color-button.c  bjb-color-button.h  bjb-controller.c  bjb-controller.h  bjb-detached-window.c  bjb-detached-window.h  bjb-editor-toolbar.c  bjb-editor-toolbar.h  bjb-empty-results-box.c  bjb-empty-results-box.h  bjb-enums.h  bjb-import-dialog.c  bjb-import-dialog.h  bjb-list-view-row.c  bjb-list-view-row.h  bjb-list-view.c  bjb-list-view.h  bjb-load-more-button.c  bjb-load-more-button.h  bjb-log.c  bjb-log.h  bjb-main-toolbar.c  bjb-main-toolbar.h  bjb-main-view.c  bjb-main-view.h  bjb-main.c  (+40 more)
src/contrib/: gtk.h  gtkbitset.c  gtkbitset.h  gtkcustomfilter.c  gtkcustomfilter.h  gtkcustomsorter.c  gtkcustomsorter.h  gtkfilter.c  gtkfilter.h  gtkfilterlistmodel.c  gtkfilterlistmodel.h  gtkflattenlistmodel.c  gtkflattenlistmodel.h  gtkintl.h  gtkprivate.h  gtkrbtree.c  gtkslicelistmodel.c  gtkslicelistmodel.h  gtksorter.c  gtksorter.h  gtksorterprivate.h  gtksortkeysprivate.h  gtksortlistmodel.c  gtksortlistmodel.h  gtktypebuiltins.c  gtktypebuiltins.h
src/contrib/roaring/: roaring.c
src/deserializer/: biji-tomboy-reader.h
src/editor/: biji-editor-selection.c  biji-editor-selection.h  biji-webkit-editor.c  biji-webkit-editor.h
src/items/: bjb-item.c  bjb-item.h  bjb-note.c  bjb-note.h  bjb-plain-note.c  bjb-plain-note.h  bjb-tag-store.c  bjb-tag-store.h  bjb-tag.c  bjb-tag.h  bjb-xml-note.c  bjb-xml-note.h  bjb-xml.h
src/libbiji/: .Makefile.am.swp  Makefile.am  biji-collection.c  biji-collection.h  biji-date-time.c  biji-date-time.h  biji-error.c  biji-error.h  biji-info-set.c  biji-info-set.h  biji-item.c  biji-item.h  biji-local-note.c  biji-local-note.h  biji-manager.c  biji-manager.h  biji-marshalers.list  biji-note-book.c  biji-note-book.h  biji-note-id.c  biji-note-id.h  biji-note-obj.c  biji-note-obj.h  biji-notebook.c  biji-notebook.h  biji-string.c  biji-string.h  biji-timeout.c  biji-timeout.h  biji-tracker.c  biji-tracker.h  biji-zeitgeist.c  biji-zeitgeist.h  libbiji.h  meson.build
src/libbiji/deserializer/: biji-lazy-deserializer.c  biji-lazy-deserializer.h  biji-tomboy-reader.c  biji-tomboy-reader.h
src/libbiji/deserializer/.deps/: biji-lazy-deserializer.Plo  biji-tomboy-reader.Plo
src/libbiji/editor/: biji-editor-selection.c  biji-editor-selection.h  biji-editor-utils.c  biji-editor-utils.h  biji-webkit-editor.c  biji-webkit-editor.h
src/libbiji/editor/.deps/: biji-editor-selection.Plo  biji-editor-utils.Plo  biji-webkit-editor.Plo
src/libbiji/provider/: Makefile.am  biji-import-provider.c  biji-import-provider.h  biji-local-note.c  biji-local-note.h  biji-local-provider.c  biji-local-provider.h  biji-memo-note.c  biji-memo-note.h  biji-memo-provider.c  biji-memo-provider.h  biji-nextcloud-note.c  biji-nextcloud-note.h  biji-nextcloud-provider.c  biji-nextcloud-provider.h  biji-own-cloud-note.c  biji-own-cloud-note.h  biji-own-cloud-provider.c  biji-own-cloud-provider.h  biji-provider.c  biji-provider.h
src/libbiji/provider/.deps/: biji-import-provider.Plo  biji-local-note.Plo  biji-local-provider.Plo  (+5 more)
src/libbiji/serializer/: biji-lazy-serializer.c  biji-lazy-serializer.h
src/providers/: bjb-local-provider.c  bjb-local-provider.h  bjb-memo-provider.c  bjb-memo-provider.h  bjb-nc-provider.c  bjb-nc-provider.h  bjb-provider.c  bjb-provider.h
src/resources/: app-menu.ui  editor-toolbar.ui  settings-dialog.ui
src/utils/: bjb-icons-colors.c  bjb-icons-colors.h
(+77 files in other folders)
