
@YELP_HELP_RULES@

HELP_ID = bijiben

HELP_FILES = \
	colors.page \
	create.page \
	cut-copy-paste.page \
	delete.page \
	formatting.page \
	index.page \
	introduction.page \
	listing.page \
	notebooks.page \
	rename.page \
	search.page \
	share.page \
	view-trash.page \
	legal.xml

HELP_MEDIA = \
	figures/HighContrast_apps_scalable_bijiben.svg \
	figures/notes-3-12.png

HELP_LINGUAS = cs el es fr hu pt_BR

-include $(top_srcdir)/git.mk
