
@YELP_HELP_RULES@

HELP_ID = bijiben

HELP_LINGUAS = cs el es fr hu pt_BR

HELP_FILES = \
	colors.page \
	notebooks.page \	
	create.page \
	delete.page \
	introduction.page \
	formatting.page \
	search.page \
	rename.page \
	share.page \
	index.page \
	listing.page \
	cut-copy-paste.page \
	view-trash.page \
	legal.xml

HELP_MEDIA = \
	figures/hicolor_apps_48x48_bijiben.png \
	figures/notes-3-12.png

-include $(top_srcdir)/git.mk
