
@YELP_HELP_RULES@

HELP_ID = bijiben

HELP_FILES = \
	colors.page \
	create.page \
	cut-copy-paste.page \
	delete.page \
	delete-permanent.page \
	delete-restore.page \
	format-list.page \
	format-text.page \
	index.page \
	introduction.page \
	new-window.page \
	notebooks.page \
	rename.page \
	search.page \
	share.page \
	legal.xml

HELP_MEDIA = \
	figures/hicolor_apps_48x48_bijiben.png \
	figures/hicolor_apps_16x16_bijiben.png \
	figures/notes-3-12.png

HELP_LINGUAS = cs de el es fr hu ko pt_BR sv

-include $(top_srcdir)/git.mk
