sources = [
  'colors.page',
  'create.page',
  'cut-copy-paste.page',
  'delete.page',
  'delete-permanent.page',
  'delete-restore.page',
  'format-list.page',
  'format-text.page',
  'index.page',
  'introduction.page',
  'new-window.page',
  'notebooks.page',
  'rename.page',
  'search.page',
  'share.page',
  'legal.xml'
]

media = [
  'figures/notes-3-36.png',
  'figures/org.gnome.Notes.svg'
]

gnome.yelp(
  bijiben_name,
  sources: sources,
  media: media,
  symlink_media: true
)
